manifests/apps/nginx-demo-manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-demo
  namespace: test
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "nginx.iemafzalhassan.tech"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx-demo
      port: 80
